Fixed armor note section, adjusted spacing, removed redundant classes

--- a/Star Wars Saga Edition/StarWarsSagaEdition.css
+++ b/Star Wars Saga Edition/StarWarsSagaEdition.css
@@ -180,16 +180,15 @@ label.clickable,
     grid-template-columns: 4fr repeat(3, 1fr) repeat(4, 1.25fr);
     grid-template-rows: 60px;
     width: 100%;
-
+    /* The following code is for when bordered regions are implemented
     background-color: #952fbd4f;
-
     border-style: solid;
     border-color: #ffffff;
     border-width: 1px;
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 8px 8px 0px 0px; */
 }
 
-.equipment-grid-title {
+.equipment-title-grid-container > span {
     /* Place objects inside to the bottom centre */
     justify-self: center;
     align-self: end;
@@ -202,46 +201,6 @@ label.clickable,
     /* Font/Text settings */
     text-align: center;
     font-weight: bold;
-}
-
-.equipment-grid-title.item-1 {
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-2 {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-3 {
-    grid-column: 3;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-4 {
-    grid-column: 4;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-5 {
-    grid-column: 5;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-6 {
-    grid-column: 6;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-7 {
-    grid-column: 7;
-    grid-row: 1;
-}
-
-.equipment-grid-title.item-8 {
-    grid-column: 8;
-    grid-row: 1;
 }
 
 /* Defenses grid section */
@@ -283,13 +242,12 @@ label.clickable,
     grid-template-columns: 4fr repeat(3, 1fr) repeat(4, 1.25fr);
     grid-template-rows: 40px auto;
     width: 100%;
-
+    /* The following code is for when bordered regions are implemented
     background-color: #952fbd27;
-
     border-style: solid;
     border-color: #ffffff;
     border-width: 1px;
-    border-top-width: 0px;
+    border-top-width: 0px; */
 }
 
 .equipment-grid-row {
@@ -305,20 +263,8 @@ label.clickable,
     width: 100%;
 }
 
-.equipment-grid-row.item-1 {
-    grid-column: 1;
-    grid-row: 1;
-    padding-left: 6px;
-    padding-right: 2px;
-}
-
-.equipment-grid-row.item-2 {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.equipment-grid-row.item-2 > input[type=checkbox],
-.equipment-grid-row.item-2 > span {
+.equipment-grid-row.carried-toggle > input[type=checkbox],
+.equipment-grid-row.carried-toggle > span {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -326,85 +272,24 @@ label.clickable,
     width: 100%;
 }
 
-.equipment-grid-row.item-2 > span {
+.equipment-grid-row.carried-toggle > span {
     text-align: center;
 }
 
-.equipment-grid-row.item-3 {
-    grid-column: 3;
-    grid-row: 1;
-}
-
-.equipment-grid-row.item-4 {
-    grid-column: 4;
-    grid-row: 1;
-}
-
-.equipment-grid-row.item-5 {
-    grid-column: 5;
-    grid-row: 1;
-    padding: 0px 2px;
-}
-
-.equipment-grid-row.item-6 {
-    grid-column: 6;
-    grid-row: 1;
-}
-
-.equipment-grid-row.item-7 {
-    grid-column: 7;
-    grid-row: 1;
-    padding: 0px 2px;
-}
-
-.equipment-grid-row.item-8 {
-    grid-column: 8;
-    grid-row: 1;
-    padding-left: 2px;
-    padding-right: 4px;
-}
-
-/* Armor location and notes fields. */
-.equipment-grid-row.armor-notes {
-    grid-area: 2 / 1 / 3 / 9;
-    width: auto;
-    justify-self: start;
-    align-self: normal;
-    padding: 2px 4px 0px 40px;
-}
-
-.equipment-grid-row.armor-notes > input{
-    width: 100%;
-    max-width: 100%;
-    margin: 0px 4px 0px 0px;
-    min-width: 350px;
-}
-
-.equipment-grid-row.armor-notes > textarea {
-    min-height: 40px;
-    height: 40px;
-    margin: 0px 4px 0px 0px;
-    resize: vertical;
-}
-
-
-
-/* Repeating equipment grid rules */
+/* Repeating equipment grid (and equipment armor) rules */
 .EquipmentSubSection > .repcontainer,
 .EquipmentSubSection > .equipment-armor-container {
     display: grid;
     grid-auto-rows: auto;
     grid-auto-flow: row;
-
     width: 100%;
-
+    /* The following code is for when bordered regions are implemented
     background-color: #952fbd27;
-
     border-color: #ffffff;
     border-style: solid;
     border-width: 1px;
     border-top-width: 0px;
-    border-radius: 0px 0px 4px 4px;
+    border-radius: 0px 0px 4px 4px; */
 }
 
 .equipment-armor-container {
@@ -417,38 +302,28 @@ label.clickable,
     margin-top: 2px;
 }
 
-.EquipmentSubSection > .repcontainer > .repitem:last-child {
+.EquipmentSubSection .repitem {
     margin-bottom: 2px;
 }
 
-.repeating-equipment-container {
+.equipment-details-container {
     display: grid;
     grid-template-columns: 4fr repeat(3, 1fr) repeat(4, 1.25fr);
     grid-auto-flow: column;
-
     width: 100%;
-
     box-sizing: border-box;
-
-    margin-bottom: 2px;
-
     position: relative;
-
     align-items: center;
     justify-items: center;
 }
 
-.repeating-equipment-container input[type="text"]{
+.equipment-details-container input[type="text"]{
     width: calc(100% - 4px);
 }
 
-.repeating-equipment-container input[type="checkbox"]{
+.equipment-details-container input[type="checkbox"]{
     width: 50%;
     height: 50%;
-}
-
-.repeating-equipment-container > *{
-    margin: 0px 2px;
 }
 
 textarea.equipment-note-field {
@@ -460,7 +335,7 @@ textarea.equipment-note-field {
 
 .equipment-note-container {
     display: grid;
-    width: auto;
+    width: 100%;
     justify-self: start;
     align-self: normal;
     padding: 2px 4px 0px 40px;
